@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "mininews"
 #
-# Auto generated 01-10-2006 21:01
+# Auto generated 02-10-2006 17:26
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -23,14 +23,14 @@ $EM_CONF[$_EXTKEY] = array(
 	'internal' => 0,
 	'uploadfolder' => 0,
 	'createDirs' => 'uploads/tx_mininews/rte/',
-	'modify_tables' => 'tt_content',
+	'modify_tables' => '',
 	'clearCacheOnLoad' => 1,
 	'lockType' => '',
 	'author' => 'Kasper Skaarhoj',
 	'author_email' => 'kasper@typo3.com',
 	'author_company' => 'Curby Soft Multimedia',
 	'version' => '0.1.7',
-	'_md5_values_when_last_written' => 'a:187:{s:8:".project";s:4:"a732";s:9:"ChangeLog";s:4:"5f56";s:12:"ext_icon.gif";s:4:"cb2b";s:17:"ext_localconf.php";s:4:"fdc3";s:15:"ext_php_api.dat";s:4:"abf3";s:14:"ext_tables.php";s:4:"e5fa";s:14:"ext_tables.sql";s:4:"f990";s:28:"ext_typoscript_editorcfg.txt";s:4:"8d57";s:24:"ext_typoscript_setup.txt";s:4:"8b4f";s:15:"flexform_ds.xml";s:4:"3691";s:25:"icon_tx_mininews_news.gif";s:4:"cb2b";s:28:"icon_tx_mininews_news__h.gif";s:4:"3198";s:29:"icon_tx_mininews_news__ht.gif";s:4:"2a26";s:30:"icon_tx_mininews_news__htu.gif";s:4:"e737";s:29:"icon_tx_mininews_news__hu.gif";s:4:"60bd";s:28:"icon_tx_mininews_news__t.gif";s:4:"3bf1";s:29:"icon_tx_mininews_news__tu.gif";s:4:"4f7b";s:28:"icon_tx_mininews_news__u.gif";s:4:"a75d";s:28:"icon_tx_mininews_news__x.gif";s:4:"694e";s:29:"icon_tx_mininews_news_old.gif";s:4:"1e24";s:13:"locallang.xml";s:4:"9e71";s:16:"locallang_db.xml";s:4:"062d";s:7:"tca.php";s:4:"baf2";s:26:"template_datastructure.xml";s:4:"ea7f";s:30:"template_datastructure_arc.xml";s:4:"b560";s:42:".settings/org.eclipse.core.resources.prefs";s:4:"fc8b";s:15:".svn/README.txt";s:4:"feca";s:16:".svn/dir-wcprops";s:4:"f4e0";s:15:".svn/empty-file";s:4:"d41d";s:12:".svn/entries";s:4:"c17c";s:11:".svn/format";s:4:"48a2";s:38:".svn/prop-base/ext_emconf.php.svn-base";s:4:"685f";s:36:".svn/prop-base/ext_icon.gif.svn-base";s:4:"c5ac";s:41:".svn/prop-base/ext_localconf.php.svn-base";s:4:"3c71";s:39:".svn/prop-base/ext_php_api.dat.svn-base";s:4:"1131";s:38:".svn/prop-base/ext_tables.php.svn-base";s:4:"3c71";s:38:".svn/prop-base/ext_tables.sql.svn-base";s:4:"a362";s:52:".svn/prop-base/ext_typoscript_editorcfg.txt.svn-base";s:4:"3c71";s:48:".svn/prop-base/ext_typoscript_setup.txt.svn-base";s:4:"3c71";s:39:".svn/prop-base/flexform_ds.xml.svn-base";s:4:"3c71";s:49:".svn/prop-base/icon_tx_mininews_news.gif.svn-base";s:4:"c5ac";s:52:".svn/prop-base/icon_tx_mininews_news__h.gif.svn-base";s:4:"1131";s:53:".svn/prop-base/icon_tx_mininews_news__ht.gif.svn-base";s:4:"1131";s:54:".svn/prop-base/icon_tx_mininews_news__htu.gif.svn-base";s:4:"1131";s:53:".svn/prop-base/icon_tx_mininews_news__hu.gif.svn-base";s:4:"1131";s:52:".svn/prop-base/icon_tx_mininews_news__t.gif.svn-base";s:4:"1131";s:53:".svn/prop-base/icon_tx_mininews_news__tu.gif.svn-base";s:4:"1131";s:52:".svn/prop-base/icon_tx_mininews_news__u.gif.svn-base";s:4:"1131";s:52:".svn/prop-base/icon_tx_mininews_news__x.gif.svn-base";s:4:"1131";s:31:".svn/prop-base/tca.php.svn-base";s:4:"3c71";s:50:".svn/prop-base/template_datastructure.xml.svn-base";s:4:"3c71";s:54:".svn/prop-base/template_datastructure_arc.xml.svn-base";s:4:"3c71";s:34:".svn/props/ext_emconf.php.svn-work";s:4:"685f";s:32:".svn/props/ext_icon.gif.svn-work";s:4:"c5ac";s:37:".svn/props/ext_localconf.php.svn-work";s:4:"3c71";s:35:".svn/props/ext_php_api.dat.svn-work";s:4:"1131";s:34:".svn/props/ext_tables.php.svn-work";s:4:"3c71";s:34:".svn/props/ext_tables.sql.svn-work";s:4:"a362";s:48:".svn/props/ext_typoscript_editorcfg.txt.svn-work";s:4:"3c71";s:44:".svn/props/ext_typoscript_setup.txt.svn-work";s:4:"3c71";s:35:".svn/props/flexform_ds.xml.svn-work";s:4:"3c71";s:45:".svn/props/icon_tx_mininews_news.gif.svn-work";s:4:"c5ac";s:48:".svn/props/icon_tx_mininews_news__h.gif.svn-work";s:4:"1131";s:49:".svn/props/icon_tx_mininews_news__ht.gif.svn-work";s:4:"1131";s:50:".svn/props/icon_tx_mininews_news__htu.gif.svn-work";s:4:"1131";s:49:".svn/props/icon_tx_mininews_news__hu.gif.svn-work";s:4:"1131";s:48:".svn/props/icon_tx_mininews_news__t.gif.svn-work";s:4:"1131";s:49:".svn/props/icon_tx_mininews_news__tu.gif.svn-work";s:4:"1131";s:48:".svn/props/icon_tx_mininews_news__u.gif.svn-work";s:4:"1131";s:48:".svn/props/icon_tx_mininews_news__x.gif.svn-work";s:4:"1131";s:27:".svn/props/tca.php.svn-work";s:4:"3c71";s:46:".svn/props/template_datastructure.xml.svn-work";s:4:"3c71";s:50:".svn/props/template_datastructure_arc.xml.svn-work";s:4:"3c71";s:32:".svn/text-base/.project.svn-base";s:4:"a732";s:33:".svn/text-base/ChangeLog.svn-base";s:4:"5f56";s:38:".svn/text-base/ext_emconf.php.svn-base";s:4:"e5f0";s:36:".svn/text-base/ext_icon.gif.svn-base";s:4:"cb2b";s:41:".svn/text-base/ext_localconf.php.svn-base";s:4:"19bf";s:39:".svn/text-base/ext_php_api.dat.svn-base";s:4:"abf3";s:38:".svn/text-base/ext_tables.php.svn-base";s:4:"1577";s:38:".svn/text-base/ext_tables.sql.svn-base";s:4:"c51a";s:52:".svn/text-base/ext_typoscript_editorcfg.txt.svn-base";s:4:"bf8a";s:48:".svn/text-base/ext_typoscript_setup.txt.svn-base";s:4:"a901";s:39:".svn/text-base/flexform_ds.xml.svn-base";s:4:"9b9a";s:49:".svn/text-base/icon_tx_mininews_news.gif.svn-base";s:4:"cb2b";s:52:".svn/text-base/icon_tx_mininews_news__h.gif.svn-base";s:4:"3198";s:53:".svn/text-base/icon_tx_mininews_news__ht.gif.svn-base";s:4:"2a26";s:54:".svn/text-base/icon_tx_mininews_news__htu.gif.svn-base";s:4:"e737";s:53:".svn/text-base/icon_tx_mininews_news__hu.gif.svn-base";s:4:"60bd";s:52:".svn/text-base/icon_tx_mininews_news__t.gif.svn-base";s:4:"3bf1";s:53:".svn/text-base/icon_tx_mininews_news__tu.gif.svn-base";s:4:"4f7b";s:52:".svn/text-base/icon_tx_mininews_news__u.gif.svn-base";s:4:"a75d";s:52:".svn/text-base/icon_tx_mininews_news__x.gif.svn-base";s:4:"694e";s:37:".svn/text-base/locallang.xml.svn-base";s:4:"9e71";s:40:".svn/text-base/locallang_db.xml.svn-base";s:4:"062d";s:31:".svn/text-base/tca.php.svn-base";s:4:"f4a3";s:50:".svn/text-base/template_datastructure.xml.svn-base";s:4:"ded9";s:54:".svn/text-base/template_datastructure_arc.xml.svn-base";s:4:"064d";s:30:".svn/wcprops/.project.svn-work";s:4:"e963";s:31:".svn/wcprops/ChangeLog.svn-work";s:4:"b1ce";s:36:".svn/wcprops/ext_emconf.php.svn-work";s:4:"083e";s:34:".svn/wcprops/ext_icon.gif.svn-work";s:4:"5b30";s:39:".svn/wcprops/ext_localconf.php.svn-work";s:4:"14eb";s:37:".svn/wcprops/ext_php_api.dat.svn-work";s:4:"3dd5";s:36:".svn/wcprops/ext_tables.php.svn-work";s:4:"c491";s:36:".svn/wcprops/ext_tables.sql.svn-work";s:4:"85fe";s:50:".svn/wcprops/ext_typoscript_editorcfg.txt.svn-work";s:4:"7ccc";s:46:".svn/wcprops/ext_typoscript_setup.txt.svn-work";s:4:"f21a";s:37:".svn/wcprops/flexform_ds.xml.svn-work";s:4:"b090";s:47:".svn/wcprops/icon_tx_mininews_news.gif.svn-work";s:4:"8087";s:50:".svn/wcprops/icon_tx_mininews_news__h.gif.svn-work";s:4:"6096";s:51:".svn/wcprops/icon_tx_mininews_news__ht.gif.svn-work";s:4:"11f1";s:52:".svn/wcprops/icon_tx_mininews_news__htu.gif.svn-work";s:4:"0764";s:51:".svn/wcprops/icon_tx_mininews_news__hu.gif.svn-work";s:4:"c773";s:50:".svn/wcprops/icon_tx_mininews_news__t.gif.svn-work";s:4:"508b";s:51:".svn/wcprops/icon_tx_mininews_news__tu.gif.svn-work";s:4:"31f7";s:50:".svn/wcprops/icon_tx_mininews_news__u.gif.svn-work";s:4:"285e";s:50:".svn/wcprops/icon_tx_mininews_news__x.gif.svn-work";s:4:"0021";s:35:".svn/wcprops/locallang.xml.svn-work";s:4:"3aa1";s:38:".svn/wcprops/locallang_db.xml.svn-work";s:4:"da8a";s:29:".svn/wcprops/tca.php.svn-work";s:4:"1199";s:48:".svn/wcprops/template_datastructure.xml.svn-work";s:4:"6c37";s:52:".svn/wcprops/template_datastructure_arc.xml.svn-work";s:4:"ecd4";s:14:"doc/manual.sxw";s:4:"e024";s:19:"doc/.svn/README.txt";s:4:"feca";s:20:"doc/.svn/dir-wcprops";s:4:"9c78";s:19:"doc/.svn/empty-file";s:4:"d41d";s:16:"doc/.svn/entries";s:4:"8717";s:15:"doc/.svn/format";s:4:"48a2";s:38:"doc/.svn/prop-base/manual.sxw.svn-base";s:4:"1131";s:34:"doc/.svn/props/manual.sxw.svn-work";s:4:"1131";s:38:"doc/.svn/text-base/manual.sxw.svn-base";s:4:"e024";s:27:"doc/.svn/tmp/manual.sxw.tmp";s:4:"d41d";s:36:"doc/.svn/wcprops/manual.sxw.svn-work";s:4:"9f7a";s:14:"pi1/ce_wiz.gif";s:4:"02b6";s:29:"pi1/class.tx_mininews_pi1.php";s:4:"c6fb";s:37:"pi1/class.tx_mininews_pi1_wizicon.php";s:4:"49d5";s:13:"pi1/clear.gif";s:4:"cc11";s:17:"pi1/locallang.xml";s:4:"aca1";s:19:"pi1/.svn/README.txt";s:4:"feca";s:20:"pi1/.svn/dir-wcprops";s:4:"026d";s:19:"pi1/.svn/empty-file";s:4:"d41d";s:16:"pi1/.svn/entries";s:4:"bff0";s:15:"pi1/.svn/format";s:4:"48a2";s:38:"pi1/.svn/prop-base/ce_wiz.gif.svn-base";s:4:"c5ac";s:53:"pi1/.svn/prop-base/class.tx_mininews_pi1.php.svn-base";s:4:"3c71";s:61:"pi1/.svn/prop-base/class.tx_mininews_pi1_wizicon.php.svn-base";s:4:"3c71";s:37:"pi1/.svn/prop-base/clear.gif.svn-base";s:4:"c5ac";s:34:"pi1/.svn/props/ce_wiz.gif.svn-work";s:4:"c5ac";s:49:"pi1/.svn/props/class.tx_mininews_pi1.php.svn-work";s:4:"3c71";s:57:"pi1/.svn/props/class.tx_mininews_pi1_wizicon.php.svn-work";s:4:"3c71";s:33:"pi1/.svn/props/clear.gif.svn-work";s:4:"c5ac";s:38:"pi1/.svn/text-base/ce_wiz.gif.svn-base";s:4:"02b6";s:53:"pi1/.svn/text-base/class.tx_mininews_pi1.php.svn-base";s:4:"7d27";s:61:"pi1/.svn/text-base/class.tx_mininews_pi1_wizicon.php.svn-base";s:4:"74ef";s:37:"pi1/.svn/text-base/clear.gif.svn-base";s:4:"cc11";s:41:"pi1/.svn/text-base/locallang.xml.svn-base";s:4:"aca1";s:36:"pi1/.svn/wcprops/ce_wiz.gif.svn-work";s:4:"9e4e";s:51:"pi1/.svn/wcprops/class.tx_mininews_pi1.php.svn-work";s:4:"63bf";s:59:"pi1/.svn/wcprops/class.tx_mininews_pi1_wizicon.php.svn-work";s:4:"de08";s:35:"pi1/.svn/wcprops/clear.gif.svn-work";s:4:"ab07";s:39:"pi1/.svn/wcprops/locallang.xml.svn-work";s:4:"d56b";s:12:"res/more.gif";s:4:"2c34";s:19:"res/.svn/README.txt";s:4:"feca";s:20:"res/.svn/dir-wcprops";s:4:"9232";s:19:"res/.svn/empty-file";s:4:"d41d";s:16:"res/.svn/entries";s:4:"08a7";s:15:"res/.svn/format";s:4:"48a2";s:36:"res/.svn/prop-base/more.gif.svn-base";s:4:"c5ac";s:32:"res/.svn/props/more.gif.svn-work";s:4:"c5ac";s:36:"res/.svn/text-base/more.gif.svn-base";s:4:"2c34";s:34:"res/.svn/wcprops/more.gif.svn-work";s:4:"2e51";s:32:"template/mininews_stylesheet.css";s:4:"a24e";s:31:"template/mininews_template.html";s:4:"04e4";s:24:"template/.svn/README.txt";s:4:"feca";s:25:"template/.svn/dir-wcprops";s:4:"2f71";s:24:"template/.svn/empty-file";s:4:"d41d";s:21:"template/.svn/entries";s:4:"1d5c";s:20:"template/.svn/format";s:4:"48a2";s:56:"template/.svn/prop-base/mininews_stylesheet.css.svn-base";s:4:"3c71";s:55:"template/.svn/prop-base/mininews_template.html.svn-base";s:4:"3c71";s:52:"template/.svn/props/mininews_stylesheet.css.svn-work";s:4:"3c71";s:51:"template/.svn/props/mininews_template.html.svn-work";s:4:"3c71";s:56:"template/.svn/text-base/mininews_stylesheet.css.svn-base";s:4:"7aff";s:55:"template/.svn/text-base/mininews_template.html.svn-base";s:4:"bef5";s:54:"template/.svn/wcprops/mininews_stylesheet.css.svn-work";s:4:"8c96";s:53:"template/.svn/wcprops/mininews_template.html.svn-work";s:4:"61f5";}',
+	'_md5_values_when_last_written' => 'a:31:{s:9:"ChangeLog";s:4:"ba77";s:12:"ext_icon.gif";s:4:"cb2b";s:17:"ext_localconf.php";s:4:"fdc3";s:14:"ext_tables.php";s:4:"2fa2";s:14:"ext_tables.sql";s:4:"bcff";s:28:"ext_typoscript_editorcfg.txt";s:4:"8d57";s:24:"ext_typoscript_setup.txt";s:4:"aab8";s:15:"flexform_ds.xml";s:4:"292f";s:25:"icon_tx_mininews_news.gif";s:4:"cb2b";s:28:"icon_tx_mininews_news__h.gif";s:4:"3198";s:29:"icon_tx_mininews_news__ht.gif";s:4:"2a26";s:30:"icon_tx_mininews_news__htu.gif";s:4:"e737";s:29:"icon_tx_mininews_news__hu.gif";s:4:"60bd";s:28:"icon_tx_mininews_news__t.gif";s:4:"3bf1";s:29:"icon_tx_mininews_news__tu.gif";s:4:"4f7b";s:28:"icon_tx_mininews_news__u.gif";s:4:"a75d";s:28:"icon_tx_mininews_news__x.gif";s:4:"694e";s:13:"locallang.xml";s:4:"9e71";s:16:"locallang_db.xml";s:4:"0e98";s:7:"tca.php";s:4:"baf2";s:26:"template_datastructure.xml";s:4:"ea7f";s:30:"template_datastructure_arc.xml";s:4:"b560";s:14:"doc/manual.sxw";s:4:"9511";s:14:"pi1/ce_wiz.gif";s:4:"02b6";s:29:"pi1/class.tx_mininews_pi1.php";s:4:"2bd3";s:37:"pi1/class.tx_mininews_pi1_wizicon.php";s:4:"49d5";s:17:"pi1/locallang.xml";s:4:"aca1";s:12:"res/more.gif";s:4:"2c34";s:28:"template/mapped_template.t3d";s:4:"e7f0";s:32:"template/mininews_stylesheet.css";s:4:"a24e";s:31:"template/mininews_template.html";s:4:"04e4";}',
 	'constraints' => array(
 		'depends' => array(
 			'cms' => '',
@@ -41,6 +41,8 @@ $EM_CONF[$_EXTKEY] = array(
 		),
 		'suggests' => array(
 		),
+	),
+	'suggests' => array(
 	),
 );
 
